2016-07-15  Chris Dumez  <cdumez@apple.com>

        Add move constructor / assignment operator to ListHashSet
        https://bugs.webkit.org/show_bug.cgi?id=159837

        Reviewed by Alex Christensen.

        Add move constructor / assignment operator to ListHashSet.

        * wtf/ListHashSet.h:

2016-07-15  Geoffrey Garen  <ggaren@apple.com>

        Added a makeRef<T> helper
        https://bugs.webkit.org/show_bug.cgi?id=159835

        Reviewed by Andreas Kling.

        Anders told me to!

        * wtf/Ref.h:
        (WTF::makeRef): Helper function to do type inference for you.

2016-07-15  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r203266.

        This change caused editing/deleting/delete-emoji.html to time
        out on El Capitan, crash under GuardMalloc

        Reverted changeset:

        "Support new emoji group candidates"
        https://bugs.webkit.org/show_bug.cgi?id=159755
        http://trac.webkit.org/changeset/203266

2016-07-15  Csaba Osztrogonác  <ossy@webkit.org>

        Revert r202560 to fix the ARMv7 build with ARM instruction set
        https://bugs.webkit.org/show_bug.cgi?id=159707

        Reviewed by Carlos Garcia Campos.

        * wtf/Platform.h: Revert r202560.

2016-07-14  Myles C. Maxfield  <mmaxfield@apple.com>

        Support new emoji group candidates
        https://bugs.webkit.org/show_bug.cgi?id=159755
        <rdar://problem/27325521>

        Reviewed by Dean Jackson.

        This patch doesn't update the rules for our cursor movement iterator, because
        I don't know the language used for implementing these rules. These rules will
        be updated in the near future. When they do,
        editing/deleting/delete-emoji-expected.txt will need to be updated.

        * wtf/text/TextBreakIterator.cpp:
        (WTF::cursorMovementIterator):

2016-07-14  Alex Christensen  <achristensen@webkit.org>

        Allow RefPtrs of const RefCounted types